CHANGES.txt - 02/12/2003
------------------------

CHANGES IN CUPS V1.1.19

	- The cupsEncodeOptions() function could encode an
	  option with a NULL last string.
	- The socket backend could report the wrong number of
	  backchannel bytes if an error occurred on the link.
	- The cups-polld program now only sleeps after getting
	  all printers and classes.  This allows for longer
	  intervals without excessive delays before classes show
	  up...
	- Added a new httpWait() function to support waiting for
	  data for a specific number of milliseconds.
	- httpGets() now times out after 1 second on
	  non-blocking HTTP connections.
	- The scheduler no longer accepts rangeOfInteger values
	  that are out of order (e.g. 5-1)
	- The sides attribute was incorrectly sent as a name
	  value; it is a keyword value.
	- The IPP backend now detects if the destination queue
	  has gone away and reports an error.
	- The scheduler and HTTP API now allocate their select()
	  sets to support larger numbers of clients on systems
	  that support it.
	- The scheduler now sets the CFProcessPath environment
	  variable under MacOS X.
	- The cupsLangDefault() function now uses the
	  CoreFoundation localization API under MacOS X.
	- The httpSeparate() function didn't handle file URIs of
	  the form "file:///path" properly.
	- The lpadmin command now supports a "protocol" option
	  for specifying the binary communications protocol to
	  use when printing binary PostScript data.
	- The scheduler did not properly parse the SystemGroup
	  directive, so only the first group would be used.
	- Revamped how strings are stored in the scheduler,
	  providing a substantial improvement in memory usage
	  for systems with large numbers of printers.
	- The PostScript filter now supports binary PostScript
	  files and files beginning with the PJL language escape
	  sequence.
	- The PPD API now provides additional information from
	  the PPD file.
	- The USB backend didn't compile on Solaris Intel.